# ymusic-tui

./: Cargo.toml
src/: errors.rs  main.rs  prelude.rs  types.rs
src/cli/: items.rs  mod.rs  prelude.rs  styles.rs
