[package]
name = "ymusic-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.13"
tui = { version = "0.16.0", features = ["crossterm", "serde"], default-features = false }
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"